@@ -1,0 +1,11 @@
+/* REXX EXEC TO IPL DEBIAN GNU/LINUX  */
+/* FOR S/390 FROM THE VM READER.      */
+/*                                    */
+'CP CLOSE RDR'
+'PURGE RDR ALL'
+'SPOOL PUNCH * RDR'
+'PUNCH KERNEL    DEBIAN   * (NOHEADER'
+'PUNCH PARMFILE  DEBIAN   * (NOHEADER'
+'PUNCH INITRD    DEBIAN   * (NOHEADER'
+'CHANGE RDR ALL KEEP NOHOLD'
+'CP IPL 000C CLEAR'
