@@ -1,0 +1,20 @@
+MEDIA_TYPE = generic
+
+KERNEL = $(DEST)/kernel.debian
+INITRD = $(DEST)/initrd.debian
+TARGET = $(INITRD) $(KERNEL) $(DEST)/debian.exec $(DEST)/parmfile.debian
+EXTRANAME = $(MEDIUM)/
+
+MANIFEST-INITRD = "initrd"
+MANIFEST-KERNEL = "kernel for vmreader ipl"
+
+# FIXME: Temporary fix, these files should be in a udeb!
+EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
+
+dest/generic/debian.exec: boot/s390/exec
+	cp -f $^ $@
+	./update-manifest $@ "ipl script"
+
+dest/generic/parmfile.debian: boot/s390/parmfile
+	cp -f $^ $@
+	./update-manifest $@ "parmfile"
