@@ -1,0 +1,23 @@
+MEDIA_TYPE = tape
+TYPE = s390-tape
+
+KERNEL = $(DEST)/kernel.debian
+TARGET = $(KERNEL) $(DEST)/initrd.debian $(DEST)/kernel.debian-nolabel $(DEST)/parmfile.debian
+
+KERNELVERSION := $(KERNELVERSION)-tape
+KERNELNAME := $(KERNELNAME)-tape
+
+MANIFEST-KERNEL = "kernel for tape ipl"
+
+dest/tape/parmfile.debian:
+	cp -f boot/s390/parmfile $@
+	./update-manifest $@ "parmfile"
+
+dest/tape/initrd.debian:
+	ln -fs ../generic/initrd.debian $@
+	./update-manifest $@ "initrd"
+
+dest/tape/kernel.debian-nolabel: dest/tape/kernel.debian
+	(dd bs=1 count=8 && dd bs=1 skip=1 count=0 && printf "\007" && dd) < $< > $@
+	./update-manifest $@ "kernel for tape ipl - nolabel"
+
