@@ -1,0 +1,18 @@
+#include "base"
+#include "kernel"
+
+# Other udebs that are needed for netboot install
+busybox-cvs-udeb
+languagechooser
+countrychooser
+iso-3166-udeb
+choose-mirror
+net-retriever
+load-installer
+cdebconf-newt-udeb
+rootskel-locale
+di-utils-terminfo
+
+# there's space for an editor
+nano-udeb
+
