@@ -1,5 +1,5 @@
 <!-- retain these comments for translator revision tracking -->
-<!-- $Id: downloading-files.xml 11568 2004-03-21 12:12:18Z waldi $ -->
+<!-- $Id$ -->
 
  <sect1 id="downloading-files">
  <title>Downloading Files from Debian Mirrors</title>
